Name:           aoc2020
Version:        0.1
cabal-version:  >= 1.2
Build-Type:     Simple

Executable 01
  Build-Depends:  base
  Main-Is:        01.hs

Executable 02
  Build-Depends:  base
  Main-Is:        02.hs

Executable 03
  Build-Depends:  base
  Main-Is:        03.hs

Executable 04
  Build-Depends:  base,
                  split
  Main-Is:        04.hs

Executable 05
  Build-Depends:  base
  Main-Is:        05.hs

Executable 06
  Build-Depends:  base,
                  split
  Main-Is:        06.hs

Executable 07
  Build-Depends:  base,
                  split,
                  containers
  Main-Is:        07.hs

Executable 08
  Build-Depends:  base,
                  split,
                  containers
  Main-Is:        08.hs

Executable 09
  Build-Depends:  base,
                  split,
                  containers
  Main-Is:        09.hs

Executable 10
  Build-Depends:  base,
                  split,
                  containers
  Main-Is:        10.hs
Executable 10
  Build-Depends:  base,
                  split,
                  containers
  Main-Is:        10.hs
